added php postgres support

--- a/etc/php/development.ini
+++ b/etc/php/development.ini
@@ -25,8 +25,12 @@ expose_php          = Off
 
 date.timezone = Europe/Berlin
 
-mysql.default_host = mysql
-mysqli.default_host = mysql
+pgsql.allow_persistent = 1
+pgsql.max_persistent = -1
+pgsql.max_links      = -1
+pgsql.auto_reset_persistent = 0
+pgsql.ignore_notice = 0
+pgsql.log_notice = 0
 
 ; Zend OPCache
 opcache.enable = 1
